CI: configuração pipeline step test de unidade